# GRAProject

Sqrt2C/: CMakeLists.txt
Sqrt2C/Implementierung/: DivisionTests.c  Expo.h  LongKomma.c  LongKomma.h  Makefile  bignum.c  bignum.h  intArr.c  intArr.h  main.c
